# ironnes

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bitset.rs  error.rs  lib.rs  nes.rs
src/nes/: cartridge.rs
src/nes/bus/: memory_mapped.rs  mod.rs
src/nes/cpu/: 6502ops.csv  addressing.rs  instruction.rs  mod.rs  register.rs  unofficial.csv
src/nes/memory/: mod.rs
src/nes/ppu/: mod.rs  nametable.rs  registers.rs
tests/: cpu.rs
tests/blargg/instr_test_v5/: mod.rs
tests/nestest/: mod.rs
