[package]
name = "iron_nes"
version = "0.1.1"
authors = ["ch8zer"]
edition = "2018"
default-run= "emulator"

[build-dependencies]
csv = "1.1.3"

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
log = "0.4"
sdl2 = "0.34.3"
simplelog = "^0.7.6"
shrust = "0.0.7"
thiserror = "1.0"

[dev-dependencies]
regex = "1.4.2"
